# oz_django

./: db.sqlite3  pyproject.toml
boards/: admin.py
boards/migrations/: 0001_initial.py  0002_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
common/: views.py
config/: settings.py  urls.py
feeds/: admin.py  serializers.py  urls.py  views.py
reviews/: models.py  serializers.py  views.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_grade_user_is_business.py
